# ai-log-analyzer

./: .cleanup_check.md  .dockerignore  .env.example  .gitignore  .phase2_progress.md  .testing_progress.md  :  =3.9.0  ANALYSIS_BASELINE_ISSUES_20260225.md  ANALYSIS_REPORT.md  AUDIT_JUSTIFICATION.md  CHANGELOG.md  CHANGELOG_V6.md  CHANGELOG_VERSIONS.md  CODE_ANALYSIS_20251218.md  COMPLETED_LOG.md  CONTEXT.md  CONTEXT_RETRIEVAL_PROTOCOL.md  DAILY_SESSION_2025_12_02.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.txt  DUPLICATES.md  Dockerfile  Dockerfile.peak-detector  E2E_TEST_RESULTS.md  ENV_SETUP.md  FINAL_STATUS.md  GETTING_STARTED.md  HOW_TO_USE.md  INIT_PHASE_FIX.md  INSTALL.md  INSTALLATION.md  INSTALLATION_CHECKLIST.md  KNOWN_ISSUES_DESIGN.md  MASTER.md  NEXT_SESSION.md  ORCHESTRATION_PROGRESS.md  PEAK_DETECTION_PROGRESS_20251217.md  PEAK_DETECTION_STATUS.md  PEAK_VERIFICATION_CHECKLIST.md  (+81 more)
.backup_2025-11-18/: refetch_low_coverage.py  trace_report_generator.py
_archive_md/: COMPLETED_LOG_2025_12_16.md  COMPLETE_LOG.md  CONTEXT_RETRIEVAL_PROTOCOL.md  DB_SCHEMA_PLAN.md  HARBOR_DEPLOYMENT_GUIDE.md  HOW_TO_USE_v2.md  IMPLEMENTATION_STATUS.md  KNOWN_ISSUES_DESIGN.md  PEAK_DETECTION_REFACTOR.md  last-session.txt  todo_final_REVISED.md  working_progress.md.backup_20251219  working_progress_NEW.md  working_progress_backup_2025-12-05.md  working_progress_backup_2025-12-12_1800.md  working_progress_backup_2025-12-17.md  working_progress_backup_20251219.md  working_progress_v2.md
_archive_scripts/: analyze_current_db.py  analyze_daily.py  analyze_db.py  analyze_errors.py  analyze_historical_week.py  analyze_md.py  analyze_period_enhanced.py  analyze_period_updated.py  analyze_related.py  analyze_upsert.py  (+81 more)
(+344 files in other folders)
